[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scripts/ui_scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://src/themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/animations/Gateway Connecting Animation.tres" type="Animation" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Authenticating Animation"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/StatusLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Authenticating", "Authenticating.", "Authenticating..", "Authenticating..." ]
}

[sub_resource type="Animation" id=2]
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/StatusLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Connecting to world", "Connecting to world.", "Connecting to world..", "Connecting to world..." ]
}

[node name="Lobby" type="Control" groups=["Lobby"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.152941, 0.160784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 287.0
margin_top = 179.0
margin_right = 737.0
margin_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 450, 0 )
custom_constants/separation = 15
alignment = 1

[node name="LobbyTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 20.0
text = "Lobby"
align = 1
valign = 1
uppercase = true

[node name="Fields" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 450.0
margin_bottom = 163.0
custom_constants/vseparation = 8
columns = 2

[node name="EmailLabel" type="Label" parent="CenterContainer/VBoxContainer/Fields"]
margin_top = 3.0
margin_right = 149.0
margin_bottom = 23.0
text = "Email:"
valign = 1

[node name="EmailField" type="LineEdit" parent="CenterContainer/VBoxContainer/Fields"]
margin_left = 153.0
margin_right = 450.0
margin_bottom = 26.0
size_flags_horizontal = 3
placeholder_text = "example@mail.com"

[node name="PasswordLabel" type="Label" parent="CenterContainer/VBoxContainer/Fields"]
margin_top = 37.0
margin_right = 149.0
margin_bottom = 57.0
text = "Password:"
valign = 1

[node name="PasswordField" type="LineEdit" parent="CenterContainer/VBoxContainer/Fields"]
margin_left = 153.0
margin_top = 34.0
margin_right = 450.0
margin_bottom = 60.0
size_flags_horizontal = 3
secret = true
placeholder_text = "p@$$w0rd"

[node name="AddressLabel" type="Label" parent="CenterContainer/VBoxContainer/Fields"]
margin_top = 71.0
margin_right = 149.0
margin_bottom = 91.0
text = "Server Address:"
valign = 1

[node name="AddressField" type="LineEdit" parent="CenterContainer/VBoxContainer/Fields"]
margin_left = 153.0
margin_top = 68.0
margin_right = 450.0
margin_bottom = 94.0
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/Fields"]
margin_top = 105.0
margin_right = 149.0
margin_bottom = 125.0
text = "Server Port:"
valign = 1

[node name="PortField" type="LineEdit" parent="CenterContainer/VBoxContainer/Fields"]
margin_left = 153.0
margin_top = 102.0
margin_right = 450.0
margin_bottom = 128.0
size_flags_horizontal = 3
placeholder_text = "8000"

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 450.0
margin_bottom = 202.0
grow_horizontal = 0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterSceneButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 450.0
margin_bottom = 241.0
text = "Don't have an account?"
flat = true

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 222.0
margin_right = 300.0
margin_bottom = 236.0
text = "Authenticating"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Authenticating Animation" = SubResource( 1 )
"anims/Game Connecting Animation" = SubResource( 2 )
"anims/Gateway Connecting Animation" = ExtResource( 3 )

[node name="NoticeContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.0
margin_top = -44.0
margin_right = 276.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="NoticeContainer"]
margin_right = 552.0
margin_bottom = 20.0
text = "v0.0-something"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoticeLabel" type="Label" parent="NoticeContainer"]
margin_top = 24.0
margin_right = 552.0
margin_bottom = 44.0
text = "This is pre-release software. Expect some bugs to be present."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RegisterSceneButton" to="." method="_on_RegisterSceneButton_pressed"]
